# vol2

./: .gitignore  bibliografia2.md
botta_reisposta_base/: docker-compose.yml
botta_reisposta_base/server_a/: Cargo.toml
botta_reisposta_base/server_a/src/: main.rs
botta_reisposta_base/server_b/: Cargo.toml  Dockerfile
botta_reisposta_base/server_b/src/: main.rs
botta_reisposta_tls/: DESCRIPTION.md  README.md  docker-compose.yml  nats-server.conf
botta_reisposta_tls/server_a/: Cargo.toml  Dockerfile
botta_reisposta_tls/server_a/src/: main.rs
botta_reisposta_tls/server_b/: Cargo.toml
botta_reisposta_tls/server_b/src/: main.rs
botta_risposta_jwt/: docker-compose.yml
botta_risposta_jwt/server_a/: Cargo.toml  Dockerfile  private.pem
botta_risposta_jwt/server_a/src/: main.rs
botta_risposta_jwt/server_b/: Cargo.toml  Dockerfile  public.pem
botta_risposta_jwt/server_b/src/: main.rs
nats-docker-demo/: README.md  docker-compose.yml
nats-docker-demo/publisher/: Cargo.toml  Dockerfile
nats-docker-demo/publisher/src/: main.rs
nats-docker-demo/subscriber/: Cargo.toml  Dockerfile
nats-docker-demo/subscriber/src/: main.rs
