[package]
name = "server_a"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.41"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23" }
rustls-pemfile = "2"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
chrono       = { version = "0.4", features = ["serde"] }