[package]
name = "server_b"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats   = "0.41"
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
jsonwebtoken = "9"        # per creare e firmare JWT
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
